@@ -13,6 +13,7 @@ Changes for 1.5:
 
 Changes for 1.4.3:
 
+ - [ZBX-67] Under DM, Synchronizing binary data between nodes for PostgresSQL (Sasha)
  - [ZBX-77] fixes for refreshing page in Monitoring (Artem)
  - [ZBX-75] fixed problem with occured warning in events (Artem)
  - [ZBX-68] fixed iframe resize on refresh in Screens (Artem)
